fix header logo height and weird white space

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  min-height: 74px;
+  min-height: 56px;
   padding-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
@@ -8,6 +8,7 @@
   width: 173px;
   height: 33px;
   padding-bottom: 41px;
+  display: block;
 }
 
 @media screen and (max-width: 633px) {
